[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rlgym-learn-algos"
requires-python = ">=3.8,<3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.8.2",
    "numpy>1.21",
    "torch>1.13",
    "typing_extensions>4.6",
    "wandb>0.15",
    "rlgym-learn>=0.1.7"
]
[tool.maturin]
features = ["pyo3/extension-module"]
